# ChangeLog for app-text/texlive-source
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  block vntex

  03 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  remove full fmtutil.cnf, it will get regenerated by texmf update and updated
  once format files are installed

  02 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  bundle also bin-xetex bin-aleph bin-omega

  02 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  add lppl 1.3c as license aswell

  29 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  switch to use versionned zips rather than tarballs

  27 Sep 2007; Alexis Ballier <aballier@gentoo.org> files/texmf-update:
  run mktexlsr before generating language.dat file, this will prevent failures
  after merging texlive-basic

  26 Sep 2007; <alexis@gentoo.org> files/texmf-update:
  regenerate all formats like was done before, this will avoid having to
  manually update latex.fmt after adding more hyphenations support

  23 Sep 2007; Alexis Ballier <aballier@gentoo.org> files/texmf-update:
  fix generation of language.dat when no other language than us is present

  22 Sep 2007; Alexis Ballier <aballier@gentoo.org> files/texmf-update:
  no need to sync with tree updmap, texmf-update is now much faster

  22 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  mimic updmap syncwithtrees option to only ask for available fonts when
  installing texlive

  22 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  disable etex, we're using pdftex

  22 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  handle updmap.cfg

  22 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild: